--- a/app/frontend/components/Checkbox/Checkbox.scss
+++ b/app/frontend/components/Checkbox/Checkbox.scss
@@ -17,5 +17,6 @@
     top: -3px;
     cursor: pointer;
     max-width: 16px;
+    padding: 0;
   }
 }
