--- a/app/frontend/components/ExpressDonation/ExpressDonation.scss
+++ b/app/frontend/components/ExpressDonation/ExpressDonation.scss
@@ -47,6 +47,7 @@
 .PaymentMethod input {
   height: 14px;
   width: 14px;
+  padding: 0;
 }
 
 .PaymentMethodWrapper__icon {
